--- a/css/main.css
+++ b/css/main.css
@@ -1266,7 +1266,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #2d0d87;
+  background: #b10fba;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
